# ibkr_nasdaq_scanner

./: .env  .env.example  Cargo.toml  README.md  use_project.sh
scripts/: get_running_trades.sh  scan_stocks.sh  setup_dependencies.sh  test_connection.sh  test_connection_simple.sh
src/: main.rs
src/api/: ibkr_client.rs  mod.rs
src/models/: mod.rs  option_chain.rs  scanner_config.rs  stock.rs
src/scanner/: logger.rs  mod.rs  nasdaq_scanner.rs  profit_calculator.rs
src/utils/: helpers.rs
stocks/: nasdaq_stocks.txt
tests/common/: mod.rs
tests/integration/: test_scanner.rs
tests/unit/: test_models.rs  test_profit_calculator.rs
