[package]
name = "ibkr_nasdaq_scanner"
version = "0.1.0"
edition = "2021"
authors = ["IBKR Scanner"]
description = "NASDAQ Option Chain Scanner using IBKR Web API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
csv = "1.2"
prettytable-rs = "0.10"
colored = "2.0"
uuid = { version = "1.0", features = ["v4"] }
indicatif = "0.17"
percent-encoding = "2.3"

[dev-dependencies]
mockito = "1.0"
tempfile = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
